2006-09-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_add_emission_hook): One too many
	DECREF on 'extra_args'.

2006-09-12  John Ehresman  <jpe@wingware.com>

	* gobject/pygobject.h (init_pygobject_check): Declare variables
	at start of code block

2006-09-06  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygmainloop.c (pyg_signal_watch_prepare): Increase the timeout
	to 1000ms instead of 100.

=== 2.12.1 ===
2006-09-04  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.h (_PYGOBJECT_H_): Corrected version check,
	(Sebastian Dröge, #354364)

	* configure.ac: Post release version bump

=== 2.12.0 ===
2006-09-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	* configure.ac: 2.12.0

2006-08-28  Johan Dahlin  <jdahlin@async.com.br>

	* docs/Makefile.am: Install html files regardless even when passing
	in --disable-docs, fixes #353159 (Matthias Clasen)

2006-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-release version bump.

=== 2.11.4 ===
2006-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

	* gobject/gobjectmodule.c (pyg_type_register): Correct a bug in
	the code that checks if parent already implements an interface or not.
	
	* tests/test-unknown.c (test_interface_base_init),
	(test_interface_get_type): Add a property to the interface, for
	better testing.
	(test_unknown_get_property),
	(test_unknown_set_property, test_unknown_class_init): Add a
	property to the class as required by the interface.
	
	* tests/test_interface.py: More thorough interface testing, with
	properties and test both the case of implementing an interface
	from scratch, and re-implementing and interface that a parent
	already implements.

2006-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pygobject__g_instance_init): If
	necessary, attach the GObject to the PyGObject here.
	(pygobject_constructv): Cope with the fact that wrapper->obj may